<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Risikous App</string>
    <string name="action_settings">Settings</string>

    <string-array name="drawer_titles">
        <item>Wilkommen</item>
        <item>Meldung</item>
        <item>Veröffentlichung</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    
    <!-- For welcome-screen -->
    <string name="title_section1">Einführung</string>
    <string name="title_section2">CIRS-Prozess</string>
    <string name="title_section3">Meldung</string>
    <string name="title_section4">Veröffentlichung</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="connection_error">Verbindung zum Internet fehlgeschlagen!</string>
    <string name="section1_text">Risikous dient als Critical Incident Reporting System (CIRS) zur Erfassung, Verwaltung und Auswertung von kritischen Ereignissen
        und Beinahefehlern. Mit diesem System ermöglichen Sie dem (medizinischen) Personal, anonym und freiwillig über relevante Zwischenfälle
        im Arbeitsumfeld zu berichten. \n\nDurch seine einfache und flexible Handhabung kann Risikous einen wichtigen Beitrag zur Erkennung von
        Schwachstellen leisten. Damit hilft dieses Reporting System, eine interne Fehlerkultur zu etablieren und trägt so zur Verbesserung der
        (Patienten-) Sicherheit bei.</string>
    <string name="section2_text"></string>
    <string name="section3_text">Unter dem Menüpunkt \'Meldung\' haben Sie die Möglichkeit, den Meldebogen für einen Beinahefehler auszufüllen.\n
        \nDie ersten drei Fragen sind Pflichtfragen, müssen also ausgefüllt werden. Alle weiteren Angaben sind freiwillig und dienen lediglich
        der detaillierten Beschreibung des Ereignisses.\n\nDas Hinzufügen von Dateianhängen wie Bildern oder Dokumenten ist ebenfalls möglich.\n
        \nNach dem Absenden des Meldebogens erhalten Sie eine Meldungsnummer, über die Sie den weiteren Prozess anonym verfolgen können.</string>
    <string name="section4_text">Der Veröffentlichungsbereich gibt Ihnen eine Übersicht aller veröffentlichten oder aktuell in Bearbeitung
        befindlichen Meldungen.\n\nIn der Übersichtsliste der Veröffentlichungen können Sie durch einen Klick auf einen Eintrag die zugehörigen
        Detailinformationen einsehen. Wurde die Bearbeitung der Meldung bereits abgeschlossen, ist zudem die festgelegte Maßnahme sichtbar.\n
        \nSie erhalten somit ein direktes Feedback sowie Informationen über den aktuellen Status ihrer Meldungen.\n\nAußerdem ist es möglich,
        die Veröffentlichung zu kommentieren. Somit können Sie weiter konstruktiv auf den Prozess einwirken.</string>

    <!--For Questionnaire Skeleton -->
    <string name="reportingArea">reportingArea</string>
    <string name="incidentDescription">incidentDescription</string>
    <string name="riskEstimation">riskEstimation</string>
    <string name="occurrenceRating">occurrenceRating</string>
    <string name="detectionRating">detectionRating</string>
    <string name="significance">significance</string>
    <string name="pointOfTime">pointOfTime</string>
    <string name="date">date</string>
    <string name="button_dateChoose">Datum auswählen</string>
    <string name="time">time</string>
    <string name="button_timeChoose">Zeit auswählen</string>
    <string name="location">location</string>
    <string name="immediateMeasure">immediateMeasure</string>
    <string name="consequences">consequences</string>
    <string name="opinionOfReporter">opinionOfReporter</string>
    <string name="personalFactors">personalFactors</string>
    <string name="organisationalFactors">organisationalFactors</string>
    <string name="additionalNotes">additionalNotes</string>
    <string name="files">files</string>
    <string name="contactInformation">contactInformation</string>
        
    <string name="maximumChars">Maximale Zeichenzahl:&#160;</string>
    <string name="maximumSize">Maximale Dateigröße:&#160;</string>
    <string name="wait">Bitte warten...</string>

    <string name="ratingHigh">Hoch</string>
    <string name="ratingMid">Mittel</string>
    <string name="ratingLow">Gering</string>
    <string name="button_addFile">Datei auswählen</string>
    <string name="button_send">Abschicken</string>

    <string name="required">* Pflichtfelder</string>

    <string name="fillRequiredFields">Bitte füllen Sie alle Pflichtfelder aus.</string>
    <string name="postSuccess">Die Meldung wurde erfolgreich gesendet.</string>
    <string name="newQuestionnaire">Neue Meldung</string>

    <!--FileChooser**********************************************************************************-->
    <string name="empty_directory">Empty Directory</string>
    <string name="storage_removed">Storage was removed or unmounted.</string>
    <string name="choose_file">Select a file</string>
    <string name="error_selecting_file">Error selecting File</string>
    <string name="internal_storage">Internal storage</string>
    <string name="chooser_title">Dateiauswahl</string>

<!-- For Details/Comment Screen !-->
    <string name="button_sendComment">Kommentar abgeben</string>
    <string name="addComment">Kommentar hinzufügen</string>
    <string name="comments">Kommentare</string>
    <string name="assignedMessage">Zugeordnete Meldung</string>
    <string name="measure" >Maßnahme</string>
    <string name="category">Kategorie</string>
    <string name="reasonDifference">Begründung für Differenz</string>
    <string name="priorities">Risikoprioritätszahlen</string>
    <string name="description">Ereignisbeschreibung</string>
    <string name="title">Titel</string>
    <string name="title_section5">Veröffentlichung</string>
    <string name="title_section6">Kommentare</string>
    <string name="publication">Veröffentlichung</string>
    <string name="connectionErrorText">Aktuell besteht keine Internetverbindung. Bitte überprüfen Sie die Netzwerkeinstellungen.</string>
    <string name="back">Zurück</string>
    <string name="openSettings">Einstellungen öffnen</string>
    <string name="errorWhileConnecting">Während der Verbindung mit dem Risikous Server ist ein Fehler aufgetreten.</string>
    <string name="tryAgain">Nochmal versuchen</string>
    <string name="maximumCharsComment">Maximale Zeichenzahl: 1000</string>
    <string name="commentAuthor">Ihr Name (optional)</string>
    <string name="commentHint">Ihr Kommentar</string>
    <string name="id">id</string>
    <string name="author">author</string>
    <string name="commentText">text</string>
    <string name="answer">Antworten</string>
    <string name="addAnswer">Antwort hinzufügen</string>
    <string name="addAnswerButtonText">Antwort abgeben</string>
    <string name="answerHint">Ihre Antwort</string>
    <string name="minimum">Minimum</string>
    <string name="average">Durchschnitt</string>
    <string name="maximum">Maximum</string>
    <string name="reporter">Meldender</string>
    <string name="qmb">QMB</string>

</resources>
