<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        style="@style/QuestionnaireLayout"
        android:id="@+id/detailView">

        <TextView
            style="@style/QuestionnaireCaptions"
            android:text="@string/publication"
            android:id="@+id/publication" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/QuestionnaireCaptionsLevel2"
                    android:text="@string/title"
                    android:id="@+id/title" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/titleR"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:textStyle="bold" />

                <TextView
                    style="@style/QuestionnaireCaptionsLevel2"
                    android:text="@string/description"
                    android:id="@+id/description" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/descriptionR"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:textStyle="bold" />

                <TextView
                    style="@style/QuestionnaireCaptionsLevel2"
                    android:text="@string/priorities"
                    android:id="@+id/priorities" />

                <GridLayout android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:columnCount="4"
                    android:rowCount="4"
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:layout_gravity="center|left">

                    <TextView
                        android:text="@string/minimum"
                        android:padding="4dp"
                        android:layout_row="0"
                        android:layout_column="1"
                        android:layout_gravity="center_horizontal"/>

                    <TextView
                        android:text="@string/average"
                        android:padding="4dp"
                        android:layout_column="2"
                        android:layout_row="0"
                        android:layout_gravity="center_horizontal" />

                    <TextView
                        android:text="@string/maximum"
                        android:padding="4dp"
                        android:layout_column="3"
                        android:layout_row="0"
                        android:layout_gravity="center_horizontal"/>

                    <TextView
                        android:text="@string/reporter"
                        android:padding="4dp"
                        android:layout_row="2"
                        android:layout_column="0"/>
                    <TextView
                        android:id="@+id/minPriorityReporter"
                        android:padding="4dp"
                        android:layout_column="1"
                        android:layout_row="2"
                        android:textStyle="bold"
                        android:layout_gravity="center_horizontal" />
                    <TextView
                        android:id="@+id/avgPriorityReporter"
                        android:padding="4dp"
                        android:layout_column="2"
                        android:layout_row="2"
                        android:textStyle="bold"
                        android:layout_gravity="center_horizontal" />
                    <TextView
                        android:id="@+id/maxPriorityReporter"
                        android:padding="4dp"
                        android:layout_column="3"
                        android:layout_row="2"
                        android:textStyle="bold"
                        android:layout_gravity="center_horizontal" />

                    <TextView
                        android:text="@string/qmb"
                        android:padding="4dp"
                        android:layout_column="0"
                        android:layout_row="3"/>

                    <TextView
                        android:id="@+id/minPriorityQMB"
                        android:padding="4dp"
                        android:layout_column="1"
                        android:layout_row="3"
                        android:textStyle="bold"
                        android:layout_gravity="center_horizontal" />

                    <TextView
                        android:id="@+id/avgPriorityQMB"
                        android:padding="4dp"
                        android:layout_column="2"
                        android:layout_row="3"
                        android:textStyle="bold"
                        android:layout_gravity="center_horizontal" />

                    <TextView
                        android:id="@+id/maxPriorityQMB"
                        android:padding="4dp"
                        android:layout_column="3"
                        android:layout_row="3"
                        android:textStyle="bold"
                        android:layout_gravity="center_horizontal" />
            </GridLayout>

                <TextView
                    style="@style/QuestionnaireCaptionsLevel2"
                    android:text="@string/reasonDifference"
                    android:id="@+id/reasonDifference" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/reasonDifferenceR"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:textStyle="bold" />

                <TextView
                    style="@style/QuestionnaireCaptionsLevel2"
                    android:text="@string/category"
                    android:id="@+id/category" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/categoryR"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:textStyle="bold" />

                <TextView
                    style="@style/QuestionnaireCaptionsLevel2"
                    android:text="@string/measure"
                    android:id="@+id/measure" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/measureR"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:textStyle="bold" />

                <TextView
                    style="@style/QuestionnaireCaptionsLevel2"
                    android:text="@string/assignedMessage"
                    android:id="@+id/assignedMessage" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/assignedMessageR"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/commentLayout">

            <LinearLayout
                style="@style/QuestionnaireLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_above="@+id/commentsLayout">

                <TextView
                    style="@style/QuestionnaireCaptions"
                    android:text="@string/comments"/>

                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/commentView"
                    android:clickable="false" />
            </LinearLayout>

        <LinearLayout
            style="@style/QuestionnaireLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:id="@+id/commentsLayout">

            <TextView
                style="@style/QuestionnaireCaptions"
                android:text="@string/addComment"
                android:id="@+id/addComment" />

            <EditText
                style="@style/QuestionnaireEdits"
                android:id="@+id/newCommentAuthor"
                android:inputType="text"
                android:hint="@string/commentAuthor"
                android:layout_marginBottom="10dp"/>

            <EditText
                style="@style/QuestionnaireEdits"
                android:id="@+id/newComment"
                android:inputType="textMultiLine"
                android:maxLines="2"
                android:hint="@string/commentHint" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button_sendComment"
                android:layout_margin="15dp"
                android:id="@+id/sendComment"
                android:background="@android:color/holo_orange_dark"/>
        </LinearLayout>

    </RelativeLayout>

</FrameLayout>