<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:id="@+id/answerLayout">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            style="@style/QuestionnaireLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true">

            <TextView
                style="@style/QuestionnaireCaptions"
                android:text="@string/answer"/>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/answerView"/>
        </LinearLayout>

        <LinearLayout
            style="@style/QuestionnaireLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:id="@+id/newAnswerLayout">

            <TextView
                style="@style/QuestionnaireCaptions"
                android:text="@string/addAnswer"
                android:id="@+id/newAnswerCaption"/>

            <EditText
                style="@style/QuestionnaireEdits"
                android:id="@+id/answerAuthor"
                android:inputType="text"
                android:hint="@string/commentAuthor"
                android:layout_marginBottom="10dp"/>

            <EditText
                style="@style/QuestionnaireEdits"
                android:id="@+id/answerText"
                android:inputType="textMultiLine"
                android:hint="@string/answerHint" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/addAnswerButtonText"
                android:layout_margin="15dp"
                android:background="@android:color/holo_orange_dark"
                android:id="@+id/sendAnswerButton"/>
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>