<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        style="@style/QuestionnaireCaptions"
        android:text="@string/connectionErrorText"
        android:id="@+id/connectionErrorText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/openSettings"
        android:id="@+id/buttonOpenSettings"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:background="@android:color/holo_orange_dark"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/buttonBackToWelcome"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/holo_orange_dark"/>
</LinearLayout>